# ResearchTikPy

./: .gitignore  pyproject.toml
researchtikpy/: __init__.py  query_lang.py  researchtik.py
tests/: helpers.py  test_get_access_token.py  test_get_followers.py  test_get_following.py  test_get_liked_videos.py  test_get_videos_hashtags.py  test_get_videos_query.py  test_package.py
