[project]
name = "ResearchTikPy"
version = "0.2.1"
authors = [
  { name="Julian Hohner", email="daswaeldchen@gmail.com" },
]
description = "Python API wrapper for the TikTok Research API"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/HohnerJulian/ResearchTikPy"

[tool.poetry]
name = "researchtikpy"
version = "0.2.1"
description = "Python API wrapper for the TikTok Research API"
authors = ["Julian Hohner <daswaeldchen@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.3"
requests = "^2.32.3"
click = "^8.1.7"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
black = "^24.10.0"
isort = "^5.13.2"
pylint = "^3.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
